# llama-shell

./: .gitignore  Makefile  Makefile.in  README.md  command.c  command.h  config.h.in  config.h.in~  configure  configure.ac  configure.scan  getargs.c  getargs.h  main.c  newfile.txt  outfile.txt  signal_handlers.h  version.h
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
include/: command.h
src/: Makefile.am  Makefile.in  command.c  command.h  getargs.c  main.c
